Revert "Merge remote-tracking branch 'origin/kingfisher' into feature/AIAI-195-Portal-Semantic-Agent-Search-SPIKE"
This reverts commit 04f5660feef38bee88f6851fb0cc8b07b88c5a28, reversing
changes made to b8bc90aec48d21863b62bb0912ec4684c5816405.